--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mundo Invertido</title>
-    <link rel="stylesheet" href="/assets/css/styles.css">
+    <link rel="stylesheet" href="./assets/css/styles.css">
 
 </head>
 <body class="light-theme" aria-label="O site está utilizando o tema Light" role="Body">
     <header aria-label="Cabeçalho da página">
         <audio id="music" autoplay>
-            <source src="/assets/musics/normal-world.mpeg">
+            <source src="./assets/musics/normal-world.mpeg">
         </audio>
         <div class="header-content">
             <img class="invert-element" src="/assets/images/banner/logo.svg" alt="imagem principal escrito Mundo Invertido">
@@ -38,7 +38,7 @@
             </p>
         </div>
         <img class="invert-element" 
-        src="/assets/images/content/inverted-world.png" 
+        src="./assets/images/content/inverted-world.png" 
         alt="Imagens de representação do mund invertido"/>
 
     </section>
@@ -67,15 +67,15 @@
             <h2>A segunda série mais assistida da netflix!</h2>
             <ul class="gallery-container" role="gallery">
                 <li class="gallery-image invert-element">
-                    <img src="/assets/images/content/serie-image-01.png" alt="Imagem do Vecna"/>
+                    <img src="./assets/images/content/serie-image-01.png" alt="Imagem do Vecna"/>
                 </li>
 
                 <li class="gallery-image invert-element">
-                    <img src="/assets/images/content/serie-image-02.png" alt="Personagens Principais"/>
+                    <img src="./assets/images/content/serie-image-02.png" alt="Personagens Principais"/>
                 </li>
 
                 <li class="gallery-image invert-element">
-                    <img src="/assets/images/content/serie-image-03.png" alt="Imagem de uma parte da 4° temporada"/>
+                    <img src="./assets/images/content/serie-image-03.png" alt="Imagem de uma parte da 4° temporada"/>
                 </li>
             </ul>
     </section>
@@ -113,7 +113,7 @@
         <p>
             Projeto feito junto a semana Front-end da DIO
         </p>
-        <img src="/assets/images/footer/logo.svg" alt="logotipo DIO">
+        <img src="./assets/images/footer/logo.svg" alt="logotipo DIO">
     </footer>
 
     <script src="./assets/js/main.js" type="module"></script>
