--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <source src="./assets/musics/normal-world.mpeg">
         </audio>
         <div class="header-content">
-            <img class="invert-element" src="/assets/images/banner/logo.svg" alt="imagem principal escrito Mundo Invertido">
+            <img class="invert-element" src="./assets/images/banner/logo.svg" alt="imagem principal escrito Mundo Invertido">
             <p class="invert-element" role="text"> Uma aventura para quem não tem medo</p>
             <button id="switch-theme-button" onclick="switchTheme()"> Inverter Mundos</button>
         </div>
